@@ -2,6 +2,7 @@ package com.robertx22.mine_and_slash.saveclasses;
 
 import com.robertx22.mine_and_slash.database.stats.Stat;
 import com.robertx22.mine_and_slash.db_lists.registry.SlashRegistry;
+import com.robertx22.mine_and_slash.saveclasses.gearitem.StatModData;
 import info.loenwind.autosave.annotations.Storable;
 import info.loenwind.autosave.annotations.Store;
 
@@ -18,8 +19,13 @@ public class StatData {
         this.Name = stat.GUID();
     }
 
+    transient Stat stat;
+
     public Stat GetStat() {
-        return SlashRegistry.Stats().get(Name);
+        if (stat == null) {
+            stat = SlashRegistry.Stats().get(Name);
+        }
+        return stat;
     }
 
     @Store
@@ -33,6 +39,14 @@ public class StatData {
 
     @Store
     public float Value = 0;
+
+    public void addFlat(float val, int lvl) {
+        if (this.GetStat().ScalesToLevel()) {
+            this.Flat += StatModData.calculateStatGrowth(val, lvl);
+        } else {
+            this.Flat += val;
+        }
+    }
 
     public void Clear() {
         Flat = 0;
