@@ -7,6 +7,7 @@ import com.robertx22.mine_and_slash.db_lists.Rarities;
 import com.robertx22.mine_and_slash.db_lists.registry.SlashRegistry;
 import com.robertx22.mine_and_slash.items.ores.ItemOre;
 import com.robertx22.mine_and_slash.saveclasses.Unit;
+import com.robertx22.mine_and_slash.saveclasses.gearitem.StatModData;
 import com.robertx22.mine_and_slash.uncommon.capability.EntityCap;
 import com.robertx22.mine_and_slash.uncommon.datasaving.Spell;
 import com.robertx22.mine_and_slash.uncommon.interfaces.data_items.DataItemType;
@@ -70,7 +71,7 @@ public class SpellItemData implements ICommonDataItem {
     }
 
     public int GetBaseValue() {
-        return 2 + GetSpell().BaseValue() * level * baseEffectPercent / 100;
+        return (int) StatModData.calculateStatGrowth(2 + GetSpell().BaseValue() * baseEffectPercent / 100, level);
     }
 
     public float GetScalingValue() {
@@ -86,11 +87,13 @@ public class SpellItemData implements ICommonDataItem {
     }
 
     private int MinBase() {
-        return (int) (1 + GetSpell().BaseValue() * level * getRarity().SpellBasePercents().Min / 100);
+        return (int) StatModData.calculateStatGrowth((1 + (float) GetSpell().BaseValue() * getRarity()
+                .SpellBasePercents().Min / 100), level);
     }
 
     private int MaxBase() {
-        return (int) (1 + GetSpell().BaseValue() * level * getRarity().SpellBasePercents().Max / 100);
+        return (int) StatModData.calculateStatGrowth((1 + (float) GetSpell().BaseValue() * getRarity()
+                .SpellBasePercents().Max / 100), level);
     }
 
     private int MinMana() {
