@@ -5,6 +5,8 @@ This could be called the hardcore update! I know a lot of you won't like any of 
 The higher the instability the higher the break chance. This means the more you modify the item, the more likely it will break. 
 Some items like Chaos Orb reduce instability. If any other item would do this, it'd be an item like the chaos orb that has a chance to make the item worse. (you're encouraged to risk it)
 
+* STAT GROWTH FORMULA CHANGES! now instead of stats being x * level. They are in a different formula that makes them grow slower at low lvls (lvl 2 mobs are no longer 2 times stronger than lvl 1) but a lvl 100 mob is now MUCH stronger than a lvl 90.
+
 Now the why. Because it adds SCARCITY. And this will be the theme of more of my mods (if i can get some good ideas). Basically, to ensure BIS (Best in Slot) items are very hard to get.
 And to stop the gameplay of farming currencies at endgame to just reroll your existing items into perfection. 
 
